Name: data-clist
Synopsis: Simple functional ring type.
Description: Simple functional bidirectional ring type.

             Given that the ring terminiology clashes with certain
             mathematical branches, we're using the term CList or
             CircularList instead.
Version: 0.1.0.0
License: BSD3
License-File: LICENSE
Author: John Van Enk <vanenkj@gmail.com>
Maintainer: Jeremy Huffman <jeremy@jeremyhuffman.com>, John Van Enk <vanenkj@gmail.com>
Stability: experimental
Category: Data Structures
Cabal-Version: >= 1.8
Build-Type: Simple
Homepage: https://github.com/sw17ch/data-clist

source-repository head
    type: git
    location: git://github.com/sw17ch/data-clist.git

Library
    Build-Depends: base >= 4 && < 5,
                   deepseq >= 1.1 && < 1.5,
                   QuickCheck >= 2.4 && < 3.0

    Exposed-Modules:
        Data.CircularList

    ghc-options:        -Wall
    gHC-prof-options:   -prof -auto-all
    hs-source-dirs:     src

Benchmark bench
    Type:           exitcode-stdio-1.0
    Main-is:        bench.hs
    ghc-options:    -Wall
    hs-source-dirs: benchmark
    build-depends:  base >= 4 && < 5
                  , criterion
                  , data-clist

Test-Suite tests
    Type:           exitcode-stdio-1.0
    Main-is:        quickcheck.hs
    hs-source-dirs: tests
    build-depends:  base >= 4 && < 5
                  , QuickCheck >= 2.4 && < 3.0
                  , data-clist
