Name: data-clist
Synopsis: Simple functional ring type.
Description: Simple functional bidirectional ring type.

             Given that the ring terminiology clashes with certain
             mathematical branches, we're using the term CList or
             CircularList instead.
Version: 0.1.2.1
License: BSD3
License-File: LICENSE
Author: John Van Enk <vanenkj@gmail.com>
Maintainer: Jeremy Huffman <jeremy@jeremyhuffman.com>, John Van Enk <vanenkj@gmail.com>
Stability: experimental
Category: Data Structures
Cabal-Version: >= 1.8
Build-Type: Simple
Homepage: https://github.com/sw17ch/data-clist

source-repository head
    type: git
    location: git://github.com/sw17ch/data-clist.git

Library
    Build-Depends: base >= 4 && < 5,
                   deepseq >= 1.1 && < 1.5
    Exposed-Modules:
        Data.CircularList
        Data.CircularList.Internal

    ghc-options:        -Wall
    hs-source-dirs:     src

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Build-Depends:    base >=4.11 && < 5
                  , data-clist
                  , QuickCheck >= 2.4 && < 2.15
  hs-source-dirs:   tests/
  main-is:          quickcheck.hs

